# subjective-priority-driven-swarm

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .roomodes  AGENTS.md  AGENT_MEMORY_AUTONOMY.md  BUG_FIX_SECRETARY_PROPERTY.md  CACHE_INVALIDATION_GUIDE.md  CLAUDE.md  CONVERSATION_LOGIC_REFACTOR.md  EXTENDED_MODEL_TOKEN_LIMITS.md  FIXES_APPLIED.md  GIT_WORKFLOW.md  HYBRID_MODE_FIX_SUMMARY.md  LETTA_API_DEBUG_REPORT.md  Makefile  PHASE_2_SOLUTION_SUMMARY.md  README.md  SETUP_COMPLETE.md  TESTING.md  TESTING_STRATEGY_REFACTOR.md  TEST_FAILURE_ANALYSIS_REPORT.md  TEST_FAILURE_FIX_RECOMMENDATIONS.md  TODO.md  TOKEN_LIMITS_FIX.md  WEBAPP_CLI_ALIGNMENT_FIX.md  WEBAPP_FIXES_SUMMARY.md  cache_invalidation_demo.py  coverage-all.xml  coverage-e2e.xml  coverage-integration.xml  coverage-summary.json  coverage-summary.md  coverage-unit.xml  creative_swarm.json  debug_agent_creation.py  debug_quinn_issue.py  fix_agent_issues.py  fix_token_limits.py  (+36 more)
.claude/: config.json  settings.json
.github/: copilot-instructions.md
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.swarm/: memory.db
Archive/: pr_15_checked_out_branch.txt  pr_15_full.json  pr_16_apply_commit.txt  pr_16_fix_plan.json  pr_17_full.json  pr_17_review_summary.json  pr_18_checked_out_branch.txt  pr_18_full.json  pr_19_full.json  pr_queue.json
Archive and backups/: older-longer-readme.md
docs/: ARCHITECTURE.md  CLI.md  INSTALL.md  TROUBLESHOOTING.md  WEB_GUI.md
exports/: board_minutes_20250727_041424.md
letta_flask/: __init__.py
scripts/: run_tests_by_category.sh
spds/: __init__.py  main.py  (+20 more)
(+144 files in other folders)
